tests/ui-tests/tests/cases/enum-guess-validation.stderr
error: Could not find an enum named Desseqt in ../../../cynic/src/bin/simple.graphql. Did you mean Dessert?
  --> $DIR/enum-guess-validation.rs:13:1
   |
13 | graphql_type = "Desseqt"
   | ^^^^^^^^^^^^

warning: variant `ICE_CREAM` should have an upper camel case name
  --> $DIR/enum-guess-validation.rs:17:5
   |
17 |     ICE_CREAM
   |     ^^^^^^^^^ help: convert the identifier to upper camel case: `IceCream`
   |
   = note: `#[warn(non_camel_case_types)]` on by default
